# oz_fastapi_task

./: .gitignore
1일차/: main.py  pyproject.toml
1일차/app/schemas/: users.py
2일차/: main.py  pyproject.toml
2일차/app/models/: movies.py
2일차/app/schemas/: movies.py  users.py
3일차/: main.py  pyproject.toml
3일차/app/models/: movies.py
3일차/app/routers/: movies.py  users.py
5일차/: .gitignore  test.sh
5일차/app/models/: users.py
5일차/app/schemas/: movies.py  users.py
meeting/: pyproject.toml
meeting/app/utils/: jwt.py
주식/: .dmypy.json  auth.py  database.py  main.py  market.py  models.py  pyproject.toml  schemas.py  trading_game.db
주식/routers/: market.py  trade.py
