[tool.poetry]
name = "3일차"
version = "0.1.0"
description = ""
authors = ["HHJina <jina199234@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.*"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"
types-passlib = "^1.7.7.20250602"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"
