[tool.poetry]
name = "주식"
version = "0.1.0"
description = ""
authors = ["HHJina <jina199234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiosqlite = "0.22.1"
annotated-doc = "0.0.4"
annotated-types = "0.7.0"
anyio = "4.12.1"
argon2-cffi = "25.1.0"
argon2-cffi-bindings = "25.1.0"
black = "25.12.0"
cffi = "2.0.0"
click = "8.3.1"
cryptography = "46.0.3"
ecdsa = "0.19.1"
fastapi = "0.128.0"
greenlet = "3.3.0"
h11 = "0.16.0"
httptools = "0.7.1"
idna = "3.11"
mypy-extensions = "1.1.0"
packaging = "25.0"
passlib = "1.7.4"
pathspec = "1.0.1"
platformdirs = "4.5.1"
psutil = "7.2.1"
pyasn1 = "0.6.1"
pycparser = "2.23"
pydantic = "2.12.5"
pydantic-core = "2.41.5"
python-dotenv = "1.2.1"
python-jose = "3.5.0"
python-multipart = "0.0.21"
pytokens = "0.3.0"
pyyaml = "6.0.3"
rsa = "4.9.1"
six = "1.17.0"
sqlalchemy = "2.0.45"
starlette = "0.50.0"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
uvicorn = "0.40.0"
uvloop = "0.22.1"
watchfiles = "1.1.1"
websockets = "15.0.1"
pymysql = "^1.1.2"
asyncio = "^4.0.0"
jose = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
ruff = "^0.14.10"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
